fix(popover): don't let popover overflow
Summary:
The popover class now will adjust itself until it fits within the window
frame. You don't see the intermediate state in the double render.

Test Plan: edgehill --test

Reviewers: bengotow

Reviewed By: bengotow

Differential Revision: https://phab.nylas.com/D1795

--- a/internal_packages/message-list/stylesheets/message-list.less
+++ b/internal_packages/message-list/stylesheets/message-list.less
@@ -28,12 +28,12 @@
   }
 
   .message-toolbar-arrow.down {
-    order:101;
+    order:201;
     margin-right: 0;
     padding-top:6px;
   }
   .message-toolbar-arrow.up {
-    order:102;
+    order:202;
     padding-top:6px;
     // <1 because of hit region padding on the button
     margin-right: @spacing-standard * 0.75;
